z-index fixed

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -10,7 +10,7 @@
   padding-bottom: 1.25rem /* 20px */;
   position: fixed;
   top: 0;
-  z-index: 0;
+  z-index: 1;
   .navContainer {
     display: flex;
     width: 100%;
